tests/paczka1/small_fuzzy/71549328.err
Error in line 1: PwvI A762 97,0
Error in line 6: S163 S163 -1,0
Error in line 2: PwvI A601 19,9
Error in line 7: PwvI A762 25,2
